# h5py-stubs

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yaml
src/h5py-stubs/: __init__.pyi  _base_id.pyi  _selector.pyi  h5.pyi  h5a.pyi  h5d.pyi  h5f.pyi  h5g.pyi  h5py_warnings.pyi  h5r.pyi  h5s.pyi  h5t.pyi  ipy_completer.pyi  version.pyi
src/h5py-stubs/_hl/: attrs.pyi  base.pyi  compat.pyi  dataset.pyi  datatype.pyi  dims.pyi  files.pyi  filters.pyi  group.pyi  selections.pyi  selections2.pyi  vds.pyi
src/h5py-stubs/tests/: __init__.pyi
tests/: mypy_assertions.py  test_datasets.py  test_group.py  test_group_get.py  test_references.py
