[project]
name = "h5py-stubs"
version = "0.1.0"
description = "Type stubs for h5py"
readme = "README.md"
authors = [
    { name = "Harry Mander", email = "harry.mander@pg.canterbury.ac.nz" }
]
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.12",
]

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle errors
    "F", # Pyflakes
    "FURB", # refurb
    "I", # isort
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific rules
    "SLOT", # flake8-slots
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]
