[project]
name = "h5py-stubs"
version = "0.1.0"
description = "Type stubs for h5py"
readme = "README.md"
authors = [
    { name = "Harry Mander", email = "harry.mander@pg.canterbury.ac.nz" }
]
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
dev-local = [
    "basedpyright>=1.31.4",
    "mypy>=1.17.1",
    "pyright>=1.1.405",
]
tests = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
]

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle errors
    "F", # Pyflakes
    "FURB", # refurb
    "I", # isort
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific rules
    "SLOT", # flake8-slots
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"src/h5py-stubs/__init__.pyi" = ["F401"]  # unused import
